samples/_failures_safe/1761791377_dbcf98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_043326ee.c: In function ‘main’:
./samples/SAFE/__tmp_043326ee.c:135:5: error: expected expression at end of input
  135 |     if (
      |     ^~
./samples/SAFE/__tmp_043326ee.c:135:5: error: expected declaration or statement at end of input
